# nutrition-kb

./: pyproject.toml  requirements-dev.txt  requirements.txt
data/raw/extracted/wafct_2019/: 01_introduction.parquet  02_components.parquet  03_nv_sum_39_per_100g_ep.parquet  04_nv_stat_39_per_100g_ep.parquet  05_nv_sum_57_per_100g_ep.parquet  06_nv_stat_57_per_100g_ep.parquet  07_yield_factors_sing_ing.parquet  08_retention_factors.parquet  sheet_index.json  (+4 more)
data/raw/sources/: MANIFEST.json  sources_metadata.json
data/silver/: component.parquet  food.parquet  food_category.parquet  food_value.parquet
docs/adr/: 0001-wafct-2019-source-des-valeurs.md  0002-modele-eav-silver-vues-wide-gold.md  0003-postgresql-kb-sqlite-embarque.md  0004-couche-raw-parquet-string-sources-hashees.md  0005-bf2005-alias-et-groupes-jamais-valeurs.md  0006-valeurs-manquantes-defaut-explicite.md  0006-valeurs-manquantes.md  0007-prose-des-chunks-en-python.md  0008-embeddings-modele-et-normalisation.md  0009-retrieval-asymetrique-et-limites-du-vecteur.md
sql/: check_gold_diabetes.sql  check_gold_hypertension.sql  check_hypertension_claims.sql  check_old_formula.sql  gold.sql  gold_chunk_table.sql  gold_hypertension.sql  query_coverage_subset.sql  sample_gold_diabetes.sql  sample_hypertension.sql  schema.sql
src/nutrition_kb/ingest/: raw.py
src/nutrition_kb/load/: postgres.py
src/nutrition_kb/rag/: chunks.py  demo_hypertension_chunks.py  embed_chunks.py  embedding.py  generate_chunks.py
src/nutrition_kb/transform/: silver.py  value.py
tests/: test_fidelity.py  test_transform_value.py
