[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nutrition-kb"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas==3.0.2",
    "pyarrow==23.0.1",
    "openpyxl==3.1.5",
    "psycopg2==2.9.12",
    "sentence-transformers==5.6.0",
    "pgvector==0.5.0",
]

[project.optional-dependencies]
dev = ["pytest==9.1.1"]

[tool.setuptools.packages.find]
where = ["src"]
